change path file for background image

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,7 @@
 html,
 body {
   height: 100%;
-  background-image: url(https://img.freepik.com/free-photo/anime-style-clouds_23-2151071780.jpg?t=st=1711759880~exp=1711763480~hmac=1ecf1e9c9cba2a89e6c7f786abacbab9caa14bf39d91f61b493cae2db3d2d5e3&w=2000);
+  background-image: url(/sarah-situ.github.io/mediaforblog/anime-style-clouds.png);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
