--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,11 @@ body {
   background-position: center;
   background-size: cover;
   padding: 30px;
+  overflow-y: scroll;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 h1,
