Add CSS for div around images

--- a/styles/main.css
+++ b/styles/main.css
@@ -66,7 +66,8 @@ button {
   flex-direction: column;
   margin-top: 50px;
 }
-
-.htmlcssphoto {
-  padding: 2px;
+.container img {
+  width: 50%;
+  height: 50%;
+  object-fit: cover;
 }
