changed all text font to monospace

--- a/styles/main.css
+++ b/styles/main.css
@@ -18,8 +18,13 @@ body::-webkit-scrollbar {
 }
 
 h1,
+h2,
 h3,
-h2 {
+p {
+  font-family: sans-serif, monospace;
+}
+
+h1 {
   text-align: center;
 }
 
