--- a/styles/main.css
+++ b/styles/main.css
@@ -56,6 +56,7 @@ button {
   margin-right: 15px;
   margin-left: 15px;
   min-width: 150px;
+  max-width: 600px;
 }
 
 .aboutme {
@@ -73,6 +74,7 @@ button {
 .container img {
   object-fit: contain;
   min-width: 200px;
+  max-width: 500px;
 }
 @media only screen and (max-width: 480px) {
   img {
