changed aboutme class name to intro

--- a/styles/main.css
+++ b/styles/main.css
@@ -59,7 +59,7 @@ button {
   max-width: 600px;
 }
 
-.aboutme {
+.intro {
   border-color: 1px solid black;
   text-align: center;
   background-color: rgb(191, 171, 224);
