--- a/styles/main.css
+++ b/styles/main.css
@@ -54,8 +54,7 @@ button {
   position: relative;
   background: rgb(191, 171, 224);
   padding: 20px 20px 20px 20px;
-  margin-right: 15px;
-  margin-left: 15px;
+  margin: auto;
   min-width: 150px;
   max-width: 500px;
 }
