--- a/styles/main.css
+++ b/styles/main.css
@@ -156,6 +156,7 @@ h2 {
 
 p {
   text-align: left;
+  font-size: 18px;
 }
 
 .tabs {
@@ -181,7 +182,7 @@ button {
   padding: 20px 20px 20px 20px;
   margin: auto;
   min-width: 150px;
-  max-width: 500px;
+  max-width: 700px;
 }
 
 .intro {
