--- a/styles/main.css
+++ b/styles/main.css
@@ -168,6 +168,12 @@ p {
   max-width: 700px;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .intro {
   border-color: 1px solid black;
   text-align: center;
