--- a/styles/main.css
+++ b/styles/main.css
@@ -156,7 +156,7 @@ h2 {
 
 p {
   text-align: left;
-  font-size: 18px;
+  font-size: 20px;
 }
 
 .about-section {
@@ -186,6 +186,40 @@ p {
   min-height: 100vh;
   flex-direction: column;
   margin-top: 50px;
+}
+
+.footer {
+  font-size: 20px;
+  background-color: #ddd;
+  margin: auto;
+  display: table;
+  padding: 8px 8px 8px 8px;
+}
+
+/* css grid display */
+.grid-container {
+  display: grid;
+  column-gap: 50px;
+  grid-template-columns: auto auto;
+  padding: 100px;
+  row-gap: 20px;
+}
+
+.grid-item {
+  background-color: rgba(255, 255, 255, 0.9);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+  width: 480px;
+  height: 160px;
+  margin: auto;
+}
+
+.TeWhareTapaWha {
+  background: url(/mediaforblog/plane.jpg);
+  background-size: 100% 100%;
+  background-position: center top;
 }
 
 .container img {
