--- a/styles/main.css
+++ b/styles/main.css
@@ -141,7 +141,7 @@ body::-webkit-scrollbar {
     text-align: left;
   }
 }
-*/ h1,
+h1,
 h2,
 h3,
 h4,
@@ -162,10 +162,10 @@ p {
 .about-section {
   position: relative;
   background: rgb(191, 171, 224);
-  padding: 20px 20px 20px 20px;
+  padding: 50px 20px 20px 20px;
   margin: auto;
   min-width: 150px;
-  max-width: 700px;
+  max-width: 900px;
 }
 
 .center {
@@ -199,10 +199,10 @@ p {
 /* css grid display */
 .grid-container {
   display: grid;
-  column-gap: 50px;
+  column-gap: 10px;
   grid-template-columns: auto auto;
   padding: 100px;
-  row-gap: 20px;
+  row-gap: 35px;
 }
 
 .grid-item {
