Updated link for main background'

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,7 @@
 html,
 body {
   height: 100%;
-  background-image: url(https://img.freepik.com/free-photo/anime-style-clouds_23-2151071780.jpg?t=st=1711776543~exp=1711780143~hmac=7b146e3be47b9db2db59402cb008ab727add1eb905b5cfafb5e7da554f000a8c&w=1380);
+  background-image: url(/mediaforblog/anime-style-clouds.png);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
