Fixed background link

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,7 @@
 html,
 body {
   height: 100%;
-  background-image: url(/mediaforblog/anime-style-clouds.png);
+  background-image: url(https://img.freepik.com/free-photo/anime-style-clouds_23-2151071780.jpg?t=st=1713616715~exp=1713620315~hmac=cd719f465032facefe23951ad537be2b8e57e1a8a8676dc1c296d20b897cac34&w=1480);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
